--- a/kanboard/index.html
+++ b/kanboard/index.html
@@ -19,19 +19,21 @@
  <div class="container">
   <div class="board">
     <h4>Todo</h4>
+    <div class="items">
+        <p class="item" >Learn React</p>
+        <p class="item" >Learn Javascript</p>
+    </div>
 
   </div>
    <div class="board">
     <h4>In Progress</h4>
-    <div class="items">
-        <p class="item">Learn React</p>
-        <p class="item">Learn Javascript</p>
-    </div>
+    
    </div>
     <div class="board">
         <h4>Done</h4>
     </div>
 
+    <button id="add-task-btn">Add task</button>
 
  </div>
 
