--- a/kanboard/index.html
+++ b/kanboard/index.html
@@ -17,7 +17,7 @@
 <body>
 
  <div class="container">
-  <div class="board">
+  <div class="board" id="target">
     <h4>Todo</h4>
     <div class="items">
         <p class="item" >Learn React</p>
@@ -25,19 +25,19 @@
     </div>
 
   </div>
-   <div class="board">
+   <div class="board" id="target">
     <h4>In Progress</h4>
     
    </div>
-    <div class="board">
+    <div class="board" id="target">
         <h4>Done</h4>
     </div>
 
-    <button id="add-task-btn">Add task</button>
+   
 
  </div>
 
-    
+     <button id="add-task-btn">Add task</button>
     <script src="./index.js"></script>
 </body>
 </html>
