--- a/kanboard/index.html
+++ b/kanboard/index.html
@@ -17,19 +17,19 @@
 <body>
 
  <div class="container">
-  <div class="board" id="target">
+  <div class="board" >
     <h4>Todo</h4>
     <div class="items">
-        <p class="item" >Learn React</p>
-        <p class="item" >Learn Javascript</p>
+        <p class="item" draggable="true" id="dragged1">Learn React</p>
+        <p class="item" draggable="true" id="dragged2">Learn Javascript</p>
     </div>
 
   </div>
-   <div class="board" id="target">
+   <div class="board" >
     <h4>In Progress</h4>
     
    </div>
-    <div class="board" id="target">
+    <div class="board" >
         <h4>Done</h4>
     </div>
 
