working on div to change it dynamcally

--- a/kanboard/index.html
+++ b/kanboard/index.html
@@ -19,9 +19,9 @@
  <div class="container">
   <div class="board" >
     <h4>Todo</h4>
-    <div class="items">
-        <p class="item" draggable="true" id="dragged1">Learn React</p>
-        <p class="item" draggable="true" id="dragged2">Learn Javascript</p>
+    <div id="items">
+        <!-- <p class="item" draggable="true" id="dragged1">Learn React</p>
+        <p class="item" draggable="true" id="dragged2">Learn Javascript</p> -->
     </div>
 
   </div>
@@ -38,6 +38,8 @@
  </div>
 
      <button id="add-task-btn">Add task</button>
+          <input type="text" name="username" placeholder="Enter your task here " id="UserInput">
+
     <script src="./index.js"></script>
 </body>
 </html>
