--- a/kanboard/index.html
+++ b/kanboard/index.html
@@ -17,7 +17,7 @@
 <body>
 
  <div class="container">
-  <div id="todo-board"     class="board" >
+  <!-- <div id="todo-board"     class="board" >
     <h4 class="heading">Todo</h4>
     
     
@@ -30,9 +30,9 @@
    </div>
     <div  id="done-board" class="board" >
         <h4 class="heading">Done</h4>
-    </div>
+    </div> -->
 
-   <button id="add-board">+</button>
+   <button id="add-board">Add Board </button>
  
 
  </div>
